--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-safe-area-context": "^4.10.8",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "twrnc": "^4.5.0"
