--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@unimodules/core": "^7.1.2",
     "expo": "~51.0.26",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~12.0.9",
