--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@unimodules/core": "^7.1.2",
+    "axios": "^1.7.4",
     "expo": "~51.0.28",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~12.0.9",
