--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~51.0.28",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
