--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
+    "socket.io-client": "^4.7.5",
     "twrnc": "^4.5.0"
   },
   "devDependencies": {
