--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@unimodules/core": "^7.1.2",
     "axios": "^1.7.4",
     "expo": "~51.0.28",
-    "expo-app-loading": "^1.0.3",
     "expo-font": "~12.0.9",
     "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
@@ -30,7 +29,8 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "socket.io-client": "^4.7.5",
-    "twrnc": "^4.5.0"
+    "twrnc": "^4.5.0",
+    "expo-splash-screen": "~0.27.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
