--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@unimodules/core": "^7.1.2",
     "axios": "^1.7.4",
     "expo": "~51.0.28",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
-    "expo-image-picker": "^15.0.7",
+    "expo-image-picker": "~15.0.7",
+    "expo-notifications": "~0.28.16",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.24",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
@@ -29,11 +33,10 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "socket.io-client": "^4.7.5",
-    "twrnc": "^4.5.0",
-    "expo-splash-screen": "~0.27.5"
+    "twrnc": "^4.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
