--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "@unimodules/core": "^7.1.2",
     "axios": "^1.7.4",
     "expo": "~51.0.28",
+    "expo-dev-client": "~4.0.25",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
